<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- splash_screen strings -->

    <string name="app_name">FI$HKU</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="fi_hku_string">FI$HKU</string>

    <string name="message_welcome_page">Selamat datang di FI$HKU</string>
    <string name="message_signup_page">Lengkapi informasi di bawah ini</string>
    <string name="message_login_page">Masukkan email dan kata sandi</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="email">Email</string>
    <string name="password">Kata Sandi</string>
    <string name="name">Nama</string>
    <string name="phone_number">Nomor Handphone</string>
    <string name="address">Alamat</string>

    <string name="lele">Lele</string>

    <string name="error_icon_description">Icon indicating an error</string>
    <string name="error_fish_not_detected">Ikan tidak terdeteksi</string>
    <string name="error_message_fish_not_detected">Gambar atau foto yang anda berikan tidak ditemukan jenis ikan</string>
    <string name="learn_more_about_fish">Pelajari lebih lanjut tentang ikan</string>

    <string name="url_learn_more_about_fish">URL_to_more_information_about_fish</string>

    <string name="section_nutrisi">Nutrisi</string>
    <string name="content_nutrisi">[Nutrisi content here]</string>
    <string name="section_pengolahan">Pengolahan</string>
    <string name="content_pengolahan">[Pengolahan content here]</string>
    <string name="section_khasiat">Khasiat</string>
    <string name="content_khasiat">[Khasiat content here]</string>

    <string name="section_title_lele">Lelé</string>
    <string name="content_about_lele">Mengenai Ikan Lele: [actual content here]</string>

    <string name="title_home">Beranda</string>
    <string name="title_detection">Deteksi</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_account">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="fish_detection">Deteksi Ikan</string>
    <string name="image_preview">Gambar Pratinjau</string>
    <string name="gallery">Pilih dari Galeri</string>
    <string name="camera">Ambil dari Kamera</string>
    <string name="detect">Deteksi Gambar</string>
    <string name="fish_detection_note">Masukkan gambar melalui galeri atau kamera. Lalu, klik tombol Deteksi Gambar</string>
    <string name="empty_image_warning">Gambar Kosong</string>

    <string name="name_user">Alexander Grahambell</string>
    <string name="email_user">alexandrgrahambell654@gmail.com</string>
    <string name="nomor_user">+62 9765456776766</string>


        <string name="my_orders">Pesanan saya            Lihat riwayat pesanan saya</string>
        <string name="view_order_history">Lihat riwayat pesanan saya</string>
        <string name="open_website">Buka Website</string>
        <string name="contact_admin">Hubungi Admin</string>
        <string name="rate_app">Beri Rating di Apps Store</string>
        <string name="privacy_policy">Kebijakan Privasi</string>

    <string-array name="name_ikan">
        <item>Lele</item>
        <item>Tongkol</item>
        <item>Gurame</item>
    </string-array>

    <string-array name="descard_ikan">
        <item>Lele adalah......</item>
        <item>Tongkol adalah.....</item>
        <item>Gurame adalah.....</item>
    </string-array>

    <integer-array name="picture_ikan">
        <item>@drawable/lele</item>
        <item>@drawable/gurame</item>
        <item>@drawable/tongkol</item>
    </integer-array>

    <!-- String-array untuk teks tentang ikan -->
    <string-array name="about_ikan">
        <item>Tentang Lele: Lele adalah ikan yang...</item>
        <item>Tentang Gurame: Gurame adalah ikan yang...</item>
        <item>Tentang Tongkol: Tongkol adalah ikan yang...</item>
        <!-- Tambahkan teks tentang ikan lainnya sesuai kebutuhan -->
    </string-array>

    <!-- String-array untuk teks nutrisi ikan -->
    <string-array name="nutrisi_ikan">
        <item>Nutrisi Lele: Lele mengandung nutrisi A, B, C...</item>
        <item>Nutrisi Gurame: Gurame mengandung nutrisi X, Y, Z...</item>
        <item>Nutrisi Tongkol: Tongkol mengandung nutrisi P, Q, R...</item>
        <!-- Tambahkan teks nutrisi ikan lainnya sesuai kebutuhan -->
    </string-array>

    <!-- String-array untuk teks pengolahan ikan -->
    <string-array name="pengolahan_ikan">
        <item>Pengolahan Lele: Lele bisa diolah menjadi berbagai masakan...</item>
        <item>Pengolahan Gurame: Gurame seringkali diolah dengan cara...</item>
        <item>Pengolahan Tongkol: Tongkol dapat diolah menjadi hidangan seperti...</item>
        <!-- Tambahkan teks pengolahan ikan lainnya sesuai kebutuhan -->
    </string-array>

    <!-- String-array untuk teks khasiat ikan -->
    <string-array name="khasiat_ikan">
        <item>Khasiat Lele: Lele memiliki beberapa manfaat untuk kesehatan seperti...</item>
        <item>Khasiat Gurame: Gurame juga dikenal memiliki manfaat seperti...</item>
        <item>Khasiat Tongkol: Tongkol memiliki khasiat yang baik untuk...</item>
        <!-- Tambahkan teks khasiat ikan lainnya sesuai kebutuhan -->
    </string-array>





</resources>