<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.fishku.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_detection"
        android:name="com.example.fishku.view.detection.DetectionFragment"
        android:label="@string/title_detection"
        tools:layout="@layout/fragment_detection" />

    <fragment
        android:id="@+id/navigation_dictionary"
        android:name="com.example.fishku.view.dictionary.DictionaryFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_dictionary" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.fishku.view.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account"/>
</navigation>