<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.account.AccountFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/title_account" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPhoto"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_below="@id/tvProfil"
            android:src="@drawable/baseline_person_24"
            app:shapeAppearanceOverlay="@style/model" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgPhoto"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/name_user"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/email_user"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvNomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvEmail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/nomor_user"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvOrder"
            app:drawableStartCompat="@drawable/baseline_assignment_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvNomor"
            android:layout_marginTop="56dp"
            android:text="@string/my_orders"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvWebsite"
            app:drawableStartCompat="@drawable/baseline_web_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvOrder"
            android:layout_marginTop="14dp"
            android:text="@string/open_website"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHubAdmin"
            app:drawableStartCompat="@drawable/baseline_contact_phone_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWebsite"
            android:layout_marginTop="14dp"
            android:text="@string/contact_admin"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvRating"
            app:drawableStartCompat="@drawable/baseline_star_rate_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvHubAdmin"
            android:layout_marginTop="14dp"
            android:text="@string/rate_app"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvPrivasi"
            app:drawableStartCompat="@drawable/baseline_privacy_tip_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvRating"
            android:layout_marginTop="14dp"
            android:text="@string/privacy_policy"
            android:textSize="18sp"
            android:textStyle="bold"/>
    </RelativeLayout>

</FrameLayout>