<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detection.DetectionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:alpha="1"
            android:text="@string/fish_detection"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:alpha="100" />

        <ImageView
            android:id="@+id/ivImagePreview"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_preview"
            android:src="@drawable/ic_image_preview"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/gallery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/camera" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDetect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="fitCenter"
            android:text="@string/detect" />

        <TextView
            android:id="@+id/tvInsertDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/fish_detection_note"
            android:textColor="@color/lightGrey"/>

    </LinearLayout>

</FrameLayout>