<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecetionResultActivity">

    <ImageView
        android:id="@+id/imageViewErrorIcon"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/error_icon_description"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewErrorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fish_not_detected"
        android:textAppearance="@style/ErrorTitleTextAppearance"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/imageViewErrorIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message_fish_not_detected"
        android:textAppearance="@style/ErrorMessageTextAppearance"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textViewErrorTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more_about_fish"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewErrorMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
