<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.welcome.WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/imageViewWelcome"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/fishku_logo_colored_1"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/message_welcome_page" />

        <Button
            android:id="@+id/buttonMasuk"
            style="@style/ButtonStyle"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:shape="rectangle"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDaftar"
            style="@style/ButtonStyleWhite"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:backgroundTint="@color/white"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="6dp"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</RelativeLayout>
